Updated images to ADZbuzz logo, added js for adzbuzz and added adzbuzz reference link on popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -28,6 +28,13 @@
         <p class="statValue" id="total-blocked">?</p>
         <h2 data-i18n="popupHitDomainCountPrompt">&nbsp;</h2>
         <p class="statValue" id="popupHitDomainCount">&nbsp;</p>
+        <div class="adzbuzz-block">&nbsp;</div>
+        <h2 class="adzbuzz-link">
+            <div class="adzbuzz-row"><a href="https://adzbuzz.com/">ADZbuzz</a></div>
+        </h2>
+        <h2 class="adzbuzz-link">
+            <div class="adzbuzz-row"><a href="http://savers.adzbuzz.com/">ADZbuzz Savers</a></div>
+        </h2>
         <div id="extraTools">
             <span id="no-popups" class="hnSwitch fa" data-i18n-tip="popupTipNoPopups">&#xf0c5;<span class="badge"></span><span></span></span>
             <span id="no-large-media" class="hnSwitch fa" data-i18n-tip="popupTipNoLargeMedia">&#xf008;<span class="badge"></span><span></span></span>
